# DNA-bober-task

./: CMakeLists.txt
source/: MyClass.cpp  MyClass.h  main.cpp
